# AbstractAlgebra

./: .gitignore  pyproject.toml
src/abstract_algebra/applications/coding_theory/: cksum.py  reed_solomon.py
src/abstract_algebra/cli/: abstralg.py  cli.py
src/abstract_algebra/core/fields/: base.py  gf2.py
src/abstract_algebra/core/groups/fields/: base.py  gf2.py
src/abstract_algebra/core/groups/rings/: base.py
src/abstract_algebra/core/linalg/: matrix.py
src/abstract_algebra/core/rings/: base.py  integer.py  poly.py
src/abstract_algebra/utils/: binary.py
src/codechain/cli/: codechain.py
src/codechain/core/: base.py  factories.py  models.py  padding.py  pipeline.py
src/codechain/core/algebra/: gf256.py
src/codechain/core/checksum/: crc.py
src/codechain/core/crypto/: base.py  sym.py
src/codechain/core/crypto/ciphers/: aes.py
src/codechain/core/crypto/ciphers/modes/: cbc.py  ecb.py
src/codechain/core/fec/: reed_solomon.py
src/codechain/utils/: binary.py  io.py  serialization.py
tests/core/crypto/ciphers/: test_aes.py
tests/data/: test_pipeline.yaml
